# borsaci

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/borsaci/: agent.py  buffett_agent.py  cli.py  mcp_tools.py  model.py  prompts.py  schemas.py  updater.py
src/borsaci/utils/: charts.py  loading.py  logger.py  ui.py
